# lab14

./: .gitignore  PROMPT_LOG.md  README.md  docker-compose.yml  go.mod  go.sum
benchmarks/go-vs-python/: benchmark_plan.md  benchmark_report.md  go.mod  go_benchmark.go  python_benchmark.py  simple_benchmark.py
emulators/go/meter-emulator/: Dockerfile  go.mod  main.go
go-collector/: Dockerfile
go-collector/benchmarks/: main.go
go-collector/benchmarks/results/: go_benchmark_results.json
go-collector/cmd/collector/: main.go
go-collector/internal/aggregation/: sliding_window.go  window.go  window_test.go
go-collector/internal/arrow-flight/: client.go  server.go
go-collector/internal/etcd-coordination/: coordinator.go
go-collector/internal/kafka/: producer.go
go-collector/internal/validation/: rust_validator.go
go-collector/pkg/models/: meter.go
k8s/: deployment-go-collector.yaml  deployment-kafka.yaml  deployment-python-processor.yaml  deployment-timescaledb.yaml  deployment-web-dashboard.yaml  namespace.yaml  secret-database.yaml  service-etcd.yaml
kafka-setup/: docker-compose-kafka.yml  topics-create.sh
monitoring/: prometheus.yml
plans/: architecture_plan.md  fix_critical_issues_plan.md
python-processor/: Dockerfile  arrow_client.py  arrow_server.py  kafka_consumer.py  main.py  requirements.txt  schema.sql  window_processor.py
rust-validation/: Cargo.toml
rust-validation/cgo-binding/: validation.h
rust-validation/src/: lib.rs
web-dashboard/: Dockerfile  app.py  requirements.txt
